# CodingBuddy

./: db.sqlite3  manage.py  pyproject.toml  render.yaml
CodingBuddy/: asgi.py  settings.py  urls.py  wsgi.py
upload/: admin.py  models.py  urls.py  views.py
upload/migrations/: 0001_initial.py  0002_alter_student_id_test_ans.py
upload/templates/: home.html  login.html  signup.html
