[tool.poetry]
name = "codingbuddy"
version = "0.1.0"
description = ""
authors = ["purushottam2004 <purushottamdafure@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
